<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What is stored in a mobile device</string>
    <string name="title_activity_main_screen">What is stored in a mobile device</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_gender_title">Gender</string>
    <string name="settings_user_info_title">Personal Information</string>
    <string name="settings_country_title">Country</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_female_value">female</string>
    <string name="gender_male_value">male</string>
    <string name="settings_age_title">Age</string>
    <string name="settings_data_sending_title">Data sending</string>
    <string name="settings_data_sending_frequency_title">Data sending frequency</string>
    <string name="age_group_under18">Under 18</string>
    <string name="age_group_18to25">18–25</string>
    <string name="age_group_25to35">25–35</string>
    <string name="age_group_over35">Over 35</string>
    <string name="frequency_daily">Daily</string>
    <string name="frequency_weekly">Weekly</string>
    <string name="frequency_monthly">Monthly</string>

    <string name="frequency_daily_value">86400000</string>
    <string name="frequency_weekly_value">604800000</string>
    <string name="frequency_monthly_value">2592000000</string>

    <string name="settings_enable_data_sending_title">Send anonymous data for research periodically</string>
    <string name="settings_only_wifi_title">Send data only when connected to WiFi</string>

    <string name="device_data_button">Show device data</string>
    <string name="title_activity_device_data">Device Data</string>
    <string name="loading_text_during_collection">Collecting data...</string>
    <string name="empty_string"></string>
    <string name="main_screen_send_data_button">Send data</string>
    <string name="settings_email_title">Email</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_message">
        &lt;h1>Picking Digital Pockets (PDP)&lt;/h1>

        &lt;p>
            PDP is a free app that shows you the statistics of what type of content your mobile device stores.
            PDP is developed as a part of PDP project, which is a research project by Aalto University and University of Helsinki.
            PDP is supported by Academy of Finland between 2012-2015.
        &lt;/p>

        &lt;p>
            PDP  collects following information about your device:
        &lt;ul>
        &lt;li>the unique device ID&lt;/li>
        &lt;li>the firmware version and phone model&lt;/li>
        &lt;li>number of files of each category (photo, music, text, video, application)&lt;/li>
        &lt;li> user information (age, gender, country) (optional)&lt;/li>
        &lt;li>e-mail (optional for those who want to participate in our lottery)&lt;/li>
        &lt;/ul>
        &lt;/p>

        &lt;p>
            The above information is hashed, e.g., we do not see the actual names or the content of the files
            but only some names and generic information such as file size.
            You can also see what is being collected and uploaded to our server by clicking on the file.
        &lt;/p>

        &lt;p>
            We &lt;b>DO NOT&lt;/b> collect any private information about the user or the device.
            The collected data will only be used for research purposes and can be shared publicly.
        &lt;/p>

        &lt;p>
            If you have further questions, please visit our project page
            &lt;a href="http://pdp.cs.helsinki.fi/">http://pdp.cs.helsinki.fi/&lt;/a>
        &lt;/p>

    </string>

    <string name="licenses_message">
        &lt;p>
            &lt;h4>The open source libraries used by this application:&lt;/h4>

             &lt;ul>
                &lt;li>
                    &lt;a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart&lt;/a>
                    © 2014 Philipp Jahoda. License: &lt;a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0&lt;/a>.
                &lt;/li>
                &lt;li>
                    &lt;a href="http://robotium.org">Robotium&lt;/a>
                    © 2009–2014 Robotium contributors. License: &lt;a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0&lt;/a>.
                &lt;/li>
                &lt;li>
                    &lt;a href="https://github.com/JakeWharton/Android-ViewPagerIndicator/">Android ViewPagerIndicator&lt;/a>
                    © 2011–2012 Android ViewPagerIndicator contributors. License: &lt;a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0&lt;/a>.
                &lt;/li>
                &lt;li>
                    &lt;a href="https://android.googlesource.com/platform/frameworks/volley">Volley&lt;/a>
                    © 2014 The Android Open Source Project. License: &lt;a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0&lt;/a>.
                &lt;/li>
                &lt;li>
                    &lt;a href="https://github.com/mockito/mockito">Mockito&lt;/a>
                    © 2014 Mockito contributors. License: &lt;a href="https://github.com/mockito/mockito/blob/master/LICENSE">MIT&lt;/a>.
                &lt;/li>
            &lt;/ul>

        &lt;/p>
    </string>

    <string name="main_screen_graph_button">Graphs</string>
    <string name="title_activity_graphs">Graphs</string>
    <string name="menu_item_share">Share</string>
    <string name="skip_button">Next</string>
    <string name="title_activity_first_launch">Welcome</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="finish_button">Finish</string>
    <string name="main_screen_data_not_sent">Data has not been sent</string>
    <string name="main_screen_data_sent_once">Data has been sent once</string>
    <string name="not_selected_text">Not selected</string>
    <string name="size_pie_chart_title">File sizes</string>
    <string name="count_pie_chart_title">File counts</string>

</resources>
